add don't work sendFile

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,15 @@
         <java.version>17</java.version>
         <telegram.versiom>6.1.0</telegram.versiom>
     </properties>
+
+    <repositories>
+        <repository>
+            <id>com.e-iceblue</id>
+            <name>e-iceblue</name>
+            <url>https://repo.e-iceblue.com/nexus/content/groups/public/</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -39,6 +48,13 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
 <!--            <version>0.9.3.1</version>-->
+        </dependency>
+
+        <!--For document docs-->
+        <dependency>
+            <groupId>e-iceblue</groupId>
+            <artifactId>spire.doc.free</artifactId>
+            <version>5.2.0</version>
         </dependency>
     </dependencies>
 
